2005-09-12  Andrew Cagney  <cagney@redhat.com>

	* FryskGui.java: Re-indent.  Move "main" code to "mainGui", add
	and pass additional glade_dir parameter.

2005-09-10  Andrew Cagney  <cagney@redhat.com>

	* FryskGui.java: Don't import java.util.logging.LogRecord, unused.

2005-09-09  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (FryskGui): Make sure all exceptions are
	thrown and passed to calling ErrorLogger.
	* glade/procpop.glade: Fix typos.
	Rename window to Frysk.

2005-09-09  Andrew Cagney  <cagney@redhat.com>

	* Move com/redhat/fedora/frysk/gui/ to frysk/gui/.

2005-09-08  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java: Moved to srcwin/

2005-09-08  Phil Muldoon  <pmuldoon@redhat.com>

	* Exported file related ChangeLog entries to monitor/ChangeLog.
	* ActionPool.java: Moved to monitor/
	* AllProcWidget.java: Ditto.
	* EggTrayIcon.java: Ditto.
	* FryskErrorFileHandler.java: Ditto.
	* LogWindow.java: Ditto.
	* ObserversMenu.java: Ditto.
	* ProcData.java: Ditto.
	* ProcDataModel.java: Ditto.
	* Saveable.java: Ditto.
	* TaskData.java: Ditto.
	* ThreadMenu.java: Ditto.
	* TrayIcon.java: Ditto.
	* WatchMenu.java: Ditto.
	* WindowManager.java: Ditto.
	* Procpop.java: Renamed to FryskGui.java.
	

2005-09-07  Sami Wagiaalla  <swagiaal@redhat.com>	 

	* Procpop.java (importPreferences): Fixed the loading problem.

2005-09-07  Phil Muldoon  <pmuldoon@redhat.com>

	* Procpop.java (setupErrorLogging): Add a MemoryHandler to Logger.
	(setupErrorLogging): Use FryskErrorFileHandler.

2005-09-06  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added gui components for the split.

2005-09-06  Phil Muldoon  <pmuldoon@redhat.com>

	* Procpop.java (setupErrorLogging): Added.
	(Procpop): Make errors be logged to logfile.
	(importPreferences): Ditto.
	(importPreferences): Downgrade warning on file not found.
	(main): Ditto.
	(setupErrorLogging): Made logfile timestamp saner.

2005-09-01  Phil Muldoon  <pmuldoon@redhat.com>
